--- a/src/components/Clock/Clock.scss
+++ b/src/components/Clock/Clock.scss
@@ -1,17 +1,9 @@
 .clock {
-  width: 500px;
-  height: 500px;
+  position: relative;
 
-  &__background {
-    width: 100%;
-    height: 100%;
-  }
-
-  &__hand {
+  canvas {
     position: absolute;
-    height: 200px;
-    width: 2px;
-
-    background: black;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 }
